<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/welcome_to_project_creator"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bothParametersButton"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:text="@string/click_to_create_a_project_by_name_and_description" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text">

        </EditText>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/nameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_create_a_project_by_name" />

        <EditText
            android:id="@+id/onlyNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name1"
            android:inputType="text">

        </EditText>
    </LinearLayout>


    <Button
        android:id="@+id/NoParametersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_create_an_empty_project" />

    <Button
        android:id="@+id/goToAllProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_view_all_created_project" />

    <EditText
        android:id="@+id/showAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/display_information"
        android:inputType="text">

    </EditText>

</LinearLayout>


